# dialogue-system-bevy

./: Cargo.toml  README.md
.github/workflows/: build.yml
assets/: dialogue.json  striped_material.wgsl
src/: main.rs
src/dialogue/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
