[package]
name = "dialogue-system-bevy"
version = "0.1.0"
edition = "2024"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.3" }
serde = "1.0.219"
serde_json = "1.0.140"
bevy_egui = "0.33.0"

[package.metadata.bevy_asset_processor]
file_path = "assets"

[package.metadata.bevy_asset_processor.processors]
"striped_material.wgsl" = "bevy_asset_processor::processor::LoadAndSave"
